# comorbidity_score

./: .gitignore  MANIFEST.in  README.md  mapping_table.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
comorbidity_score_calc/: __init__.py  calc.py  codes.json  test_calc.py
comorbidity_score_calc/mappings/: charlson_icd10gm_2021.json  charlson_icd10gm_2022.json  charlson_icd10gm_2023.json  charlson_icd10gm_2024.json  charlson_icd10gm_2025.json  charlson_icd10gm_2026.json  charlson_icd10gmquan_2024.json  charlson_icd10gmquanorig_2024.json
comorbidity_score_calc/weights/: charlson_weights_default.json
comorbidity_score_gaetan/: text.txt
tests/: test_calc.py  test_metadata.py  test_metadata_and_weights.py
