[metadata]
name = comorbidity-score
version = 0.1.0
author = Your Name
author_email = your@email.com
description = Calculate comorbidity scores from ICD-10 codes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
